--- a/styles/styles14.css
+++ b/styles/styles14.css
@@ -54,12 +54,14 @@ nav ul li a:hover {
     color: white;
     font-size: 1.5em;
     cursor: pointer;
+    background-color: #f4f4f4;
 }
 
 main {
     margin-top: 4em;
     padding: 2em;
 }
+
 
 section {
     padding: 2em 0;
